[gd_scene load_steps=3 format=2]

[ext_resource path="res://screens/assets/Bg.tscn" type="PackedScene" id=1]
[ext_resource path="res://screens/LoginRegister.gd" type="Script" id=2]

[node name="ConnectionScreen" type="Node2D"]
script = ExtResource( 2 )

[node name="Bg" parent="." instance=ExtResource( 1 )]

[node name="Control" type="Control" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 310.0
margin_bottom = 170.0

[node name="TabContainer" type="TabContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Login" type="Control" parent="Control/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="GridContainer" type="GridContainer" parent="Control/TabContainer/Login"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -146.0
margin_top = -62.0
margin_right = 144.0
margin_bottom = 18.0
columns = 2

[node name="EmailLabel" type="Label" parent="Control/TabContainer/Login/GridContainer"]
margin_top = 5.0
margin_right = 64.0
margin_bottom = 19.0
text = "E-mail:"

[node name="Email" type="LineEdit" parent="Control/TabContainer/Login/GridContainer"]
margin_left = 68.0
margin_right = 290.0
margin_bottom = 24.0
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="PasswordLabel" type="Label" parent="Control/TabContainer/Login/GridContainer"]
margin_top = 33.0
margin_right = 64.0
margin_bottom = 47.0
text = "Password:"

[node name="Password" type="LineEdit" parent="Control/TabContainer/Login/GridContainer"]
margin_left = 68.0
margin_top = 28.0
margin_right = 290.0
margin_bottom = 52.0
size_flags_horizontal = 3
text = "password"
secret = true
caret_blink = true
caret_blink_speed = 0.5

[node name="Empty" type="Control" parent="Control/TabContainer/Login/GridContainer"]
margin_top = 56.0
margin_right = 64.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveCheckBox" type="CheckBox" parent="Control/TabContainer/Login/GridContainer"]
margin_left = 68.0
margin_top = 56.0
margin_right = 290.0
margin_bottom = 80.0
pressed = true
text = "Save email and password"

[node name="LoginButton" type="Button" parent="Control/TabContainer/Login"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -33.5
margin_top = -40.0
margin_right = 33.5
margin_bottom = -10.0
text = "Login"

[node name="Create Account" type="Control" parent="Control/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 42.0
margin_right = -4.0
margin_bottom = -4.0

[node name="GridContainer" type="GridContainer" parent="Control/TabContainer/Create Account"]
anchor_right = 1.0
anchor_bottom = 1.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameLabel" type="Label" parent="Control/TabContainer/Create Account/GridContainer"]
margin_top = 5.0
margin_right = 70.0
margin_bottom = 19.0
text = "Username:"

[node name="Username" type="LineEdit" parent="Control/TabContainer/Create Account/GridContainer"]
margin_left = 74.0
margin_right = 292.0
margin_bottom = 24.0
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="EmailLabel" type="Label" parent="Control/TabContainer/Create Account/GridContainer"]
margin_top = 33.0
margin_right = 70.0
margin_bottom = 47.0
text = "E-mail:"

[node name="Email" type="LineEdit" parent="Control/TabContainer/Create Account/GridContainer"]
margin_left = 74.0
margin_top = 28.0
margin_right = 292.0
margin_bottom = 52.0
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="PasswordLabel" type="Label" parent="Control/TabContainer/Create Account/GridContainer"]
margin_top = 61.0
margin_right = 70.0
margin_bottom = 75.0
text = "Password:"

[node name="Password" type="LineEdit" parent="Control/TabContainer/Create Account/GridContainer"]
margin_left = 74.0
margin_top = 56.0
margin_right = 292.0
margin_bottom = 80.0
size_flags_horizontal = 3
secret = true
caret_blink = true
caret_blink_speed = 0.5

[node name="Empty" type="Control" parent="Control/TabContainer/Create Account/GridContainer"]
margin_top = 84.0
margin_right = 70.0
margin_bottom = 108.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveCheckBox" type="CheckBox" parent="Control/TabContainer/Create Account/GridContainer"]
margin_left = 74.0
margin_top = 84.0
margin_right = 292.0
margin_bottom = 108.0
pressed = true
text = "Save email and password"

[node name="CreateAccountButton" type="Button" parent="Control/TabContainer/Create Account"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -73.2953
margin_top = -27.474
margin_right = 92.7047
margin_bottom = 2.52605
text = "Create Account"

[connection signal="pressed" from="Control/TabContainer/Login/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="Control/TabContainer/Create Account/CreateAccountButton" to="." method="_on_CreateAccountButton_pressed"]
